fix vote feedback alignment

--- a/src/components/Proposal/ProposalDetails.scss
+++ b/src/components/Proposal/ProposalDetails.scss
@@ -138,7 +138,7 @@ button.disabled {
       float: right;
       text-align: left;
       display: inline-block;
-      right: 40px;
+      right: 30px;
       top: 12px;
       position: relative;
     }
